# LearningHaskell

./: .gitmodules  Data-Domain-Command.html  Data-Domain-Event.html  Data-Domain.html  Data-LightSwitch.html  LearningHaskell.cabal  LearningHaskell.haddock  Makefile  README.md  doc-index.html  index-frames.html  index.html  mini_Data-Domain-Command.html  mini_Data-Domain-Event.html  mini_Data-Domain.html  mini_Data-LightSwitch.html
src/: Console.hs  Main.hs
src/Data/: Domain.hs  LightSwitch.hs
src/Data/Domain/: Command.hs  Event.hs
test/Data/: LightSwitchSpec.hs
test/Data/Domain/: CommandSpec.hs
