name                       : LearningHaskell
version                    : 0.1.0.0
synopsis                   : Self-learning functional programming with Haskell.
description                : Please see README.md
homepage                   : http://github.com/a4099181/LearningHaskell#readme
license                    : MIT
license-file               : LICENSE
author                     : seb!
maintainer                 : sebi@sebi.one.pl
copyright                  : 2016 seb!
category                   : Web
build-type                 : Simple
cabal-version              : >=1.10

executable LearningHaskell
    default-language       : Haskell2010
    hs-source-dirs         : src
    main-is                : Main.hs
    build-depends          : base >= 4.7 && < 5
                           , happstack-server

library
    default-language       : Haskell2010
    hs-source-dirs         : src
    exposed-modules        : Data.LightSwitch
    build-depends          : base >= 4.7 && < 5

test-suite spec
    default-language       : Haskell2010
    hs-source-dirs         : test
    main-is                : Spec.hs
    type                   : exitcode-stdio-1.0
    build-depends          : base >= 4.7 && < 5
                           , hspec   == 2.*
                           , LearningHaskell
