name                       : LearningHaskell
version                    : 0.1.0.0
synopsis                   : Self-learning functional programming with Haskell.
description                : http://github.com/a4099181/LearningHaskell#readme
homepage                   : http://github.com/a4099181/LearningHaskell#readme
license                    : MIT
license-file               : LICENSE
author                     : seb!
maintainer                 : sebi@sebi.one.pl
copyright                  : 2016 seb!
category                   : Web
build-type                 : Simple
cabal-version              : >=1.10

source-repository head
    type                   : git
    location               : git://github.com/LearningHaskell.git

executable LearningHaskell-console
    default-language       : Haskell2010
    ghc-options            : -Wall
    hs-source-dirs         : src
    main-is                : Console.hs
    build-depends          : base >= 4.7 && < 5
                           , mtl

executable LearningHaskell
    default-language       : Haskell2010
    ghc-options            : -Wall
    hs-source-dirs         : src
    main-is                : Main.hs
    build-depends          : base >= 4.7 && < 5
                           , happstack-server

library
    default-language       : Haskell2010
    ghc-options            : -Wall
    hs-source-dirs         : src
    exposed-modules        : Data.Domain
                           , Data.Domain.Command
                           , Data.Domain.Event
                           , Data.LightSwitch
    build-depends          : base >= 4.7 && < 5
                           , mtl

test-suite spec
    default-language       : Haskell2010
    ghc-options            : -Wall
    hs-source-dirs         : test
    main-is                : Spec.hs
    type                   : exitcode-stdio-1.0
    build-depends          : base >= 4.7 && < 5
                           , hspec   == 2.*
                           , mtl
                           , LearningHaskell
